21_3/depl-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-back
  labels:
    role: den-ingress
    app: back-app
    organization: netology-fops40
    creator: denskv
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: app-back
  template:
    metadata:
      labels:
        app: app-back
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 1180
