21_3/depl-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: depl-front
  labels:
    role: den-ingress
    app: front-app
    organization: netology-fops40
    creator: denskv
spec:
  replicas: 2
  minReadySeconds: 10
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: app-front
  template:
    metadata:
      labels:
        app: app-front
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
