21_3/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-back
  labels:
    role: den-ingress
    app: back-app
    organization: netology-fops40
    creator: denskv
spec:
  type: ClusterIP
  selector:
    app: app-back
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
