21_3/svc_ingress.yaml
apiVersion: networking.k8s.io/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fops-ingress
  labels:
    role: den-ingress
    app: ingress-svc-front-back
    organization: netology-fops40
    creator: denskv
spec:
  rules:
  - host: fops.local
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-back
            port:
              number: 1180
      - path: /()(.*)  
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 80
